@@ -6,6 +6,7 @@ Pending changes in the mainline
 * New function in plugin SDK: "OrthancPluginSendMultipartItem2()"
 * Fix range search if the lower or upper limit is absent
 * Fix modality worklists lookups if tags with UN (unknown) VR are present
+* Warn about badly formatted modality/peer definitions in configuration file at startup
 
 
 Version 0.9.6 (2015/12/08)
